# IDA_Quant

./: LICENSE  README.md
Intain_Quant/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Intain_Quant/app/: streamlit_app.py
Intain_Quant/behaviors/: __init__.py  base.py  constant.py  scenario.py  statistical.py
Intain_Quant/core/: __init__.py  config.py  schema.py  utils.py
Intain_Quant/data_prep/: __init__.py  loader.py  tape_builder.py  validators.py
Intain_Quant/distributions/: __init__.py  benchmarks.py  correlation.py  historical.py  sampler.py
Intain_Quant/docs/: ARCHITECTURE.md  COLLATERAL_ENGINE_DESIGN.md
Intain_Quant/engine/: __init__.py  cashflow.py  events.py  runner.py
Intain_Quant/models/: __init__.py  cdr_model.py  cpr_model.py  ml_model.py  severity_model.py
Intain_Quant/pm/: __init__.py  aggregator.py  decisions.py  metrics.py
